<resources>
    <string name="app_name">MyZapp</string>
    <string name="difficulty">Difficulty</string>
    <string name="look_answers">Look Answers</string>
    <string name="false_option">False</string>
    <string name="true_option">True</string>
    <string name="category">Category</string>
    <string name="question_1">Question 1</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="logoinstitucional">logoinstitucional</string>
    <string name="CloseAPP">CloseApp</string>
</resources>
