<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="fragments.BlankFragment">

    <TextView
        android:id="@+id/question_Tittle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="34dp"
        android:layout_marginBottom="3dp"
        android:text="@string/question_1"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/tittle_Category"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo_desafioLA" />

    <TextView
        android:id="@+id/tittle_Category"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="7dp"
        android:text="@string/category"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/category_Value"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/question_Tittle" />

    <TextView
        android:id="@+id/category_Value"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginTop="7dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/message"
        app:layout_constraintTop_toBottomOf="@+id/tittle_Category"
        tools:layout_editor_absoluteX="-5dp" />

    <TextView
        android:id="@+id/message"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginTop="8dp"
        android:text="@string/difficulty"
        app:layout_constraintBottom_toTopOf="@+id/diffuclty_Value"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/category_Value" />

    <TextView
        android:id="@+id/diffuclty_Value"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/question"
        app:layout_constraintTop_toBottomOf="@+id/message"
        tools:layout_editor_absoluteX="0dp" />

    <TextView
        android:id="@+id/question"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toTopOf="@+id/radioGrupoRespuestas"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/diffuclty_Value" />

    <RadioGroup
        android:id="@+id/radioGrupoRespuestas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="48dp"
        app:layout_constraintBottom_toTopOf="@+id/btnAnswerConsult"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/question">

        <RadioButton
            android:id="@+id/radioFirstOption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/true_option" />

        <RadioButton
            android:id="@+id/radioSecondOption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/false_option" />

    </RadioGroup>

    <ImageView
        android:id="@+id/logo_desafioLA"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="79dp"
        android:contentDescription="@string/logoinstitucional"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnsecondFragment"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGrupoRespuestas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="216dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="60dp"
        android:layout_marginBottom="40dp"
        android:background="@color/colorPrimaryDark"
        android:paddingHorizontal="20dp"
        android:text="@string/CloseAPP"
        android:textColor="#FFFFFF" />

</FrameLayout>